Add 2 img for the gallery

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <main class="main-content">
 
         <section class="gallery">
+            <img src="img/1.jpg" id="1" onclick="onImgSelect(this)">
+            <img src="img/2.jpg" id="2" onclick="onImgSelect(this)">
         </section>
 
         <section class="editor">
