--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </section>
 
         <section class="editor">
+            <div class="canvas-container">
+                <canvas width="400" height="400">
+                </canvas>
+            </div>
         </section>
     </main>
 
