Implement onclick img to show the img on the canvas for make a meme

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     </main>
 
     <script src="js/main.js"></script>
+    <script src="js/services/meme.service.js"></script>
+    <script src="js/controller/gallery.controller.js"></script>
+    <script src="js/controller/meme.controller.js"></script>
 </body>
 
 </html>
