Change the gallery render from html to js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Meme Generator</title>
 </head>
 
-<body>
+<body onload="onInit()">
 
     <header class="main-header">
         <h1 class="main-title">Meme Generator</h1>
@@ -17,8 +17,6 @@
     <main class="main-content">
 
         <section class="gallery">
-            <img src="img/1.jpg" id="1" onclick="onImgSelect(this)">
-            <img src="img/2.jpg" id="2" onclick="onImgSelect(this)">
         </section>
 
         <section class="editor">
