Add  onMemeText() function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <canvas width="400" height="400">
                 </canvas>
             </div>
+
+            <aside class="edit-controller">
+                <label for="memeTxt">Meme Text:</label>
+                <input type="text" name="txt" id="memeTxt" oninput="onMemeText(value)" value="Good Meme">
+            </aside>
         </section>
     </main>
 
