Set aplication basic styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Meme Generator</title>
 </head>
 
 <body onload="onInit()">
 
     <header class="main-header">
-        <h1 class="main-title">Meme Generator</h1>
+        <h3 class="logo" onclick="onLogo()">Meme Generator</h3>
     </header>
 
     <main class="main-content">
