Add download option

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <aside class="edit-controller">
                     <label for="memeTxt">Meme Text:</label>
                     <input type="text" name="txt" id="memeTxt" oninput="onMemeText(value)" value="Good Meme">
+
+                    <div class="act">
+                        <a href="#" class="act-btns download-btn flex" onclick="onDownloadCanvas(this)" download="file-name">Download Meme <div class="fa download"></div></a>
+                    </div>
+
                 </aside>
             </section>
         </div>
