--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <label for="memeTxt">Meme Text:</label>
                     <input type="text" name="txt" id="memeTxt" oninput="onMemeText(value)" value="Good Meme">
 
+                    <div class="settings">
+                        <input type="color" name="clr" id="txtColor" oninput="onChangeTxtColor(value)" value="black">
+                    </div>
+
                     <div class="act">
                         <a href="#" class="act-btns download-btn flex" onclick="onDownloadCanvas(this)" download="file-name">Download Meme <div class="fa download"></div></a>
                     </div>
