Add some styling to editor

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <input type="text" name="txt" id="memeTxt" oninput="onMemeText(value)" value="Good Meme">
                     </div>
 
-                    <div class="lines-settings">
+                    <div class="lines-settings flex">
                         <button class="fa add-line" onclick="onAddLine()"></button>
                         <button class="fa switch-line" onclick="onSwitchLine()"></button>
                     </div>
