Set onclick to chosse line for edit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="main-editor">
             <section class="editor">
                 <div class="canvas-container">
-                    <canvas width="400" height="400">
+                    <canvas width="400" height="400" onclick="onTxt(event)">
                     </canvas>
                 </div>
 
