--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </button>
                     </div>
 
-                    <div class="act">
+                    <div class="act flex">
                         <a href="#" class="act-btns download-btn flex" onclick="onDownloadCanvas(this)"
                             download="file-name">Download Meme <div class="fa download"></div></a>
                     </div>
