Add choose fonts option

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                         <button class="settings-btns size-btn" onclick="onFontSize(-4)">
                             <div class="fa font-size">-</div>
                         </button>
+                        <select name="font" id="selectFont" onchange="onSelectFont(value)">
+                            <option value="Arial">Arial</option>
+                            <option value="Georgia">Georgia</option>
+                            <option value="Impact">Impact</option>
+                            <option value="monospace">monospace</option>
+                            <option value="cursive">cursive</option>
+                        </select>
                     </div>
 
                     <div class="act flex">
