Change main files name

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/controller/main.controller.js"></script>
     <script src="js/services/meme.service.js"></script>
     <script src="js/controller/gallery.controller.js"></script>
     <script src="js/controller/meme.controller.js"></script>
