--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     </div>
 
                     <div class="settings flex">
-                        <input class="txt-color" type="color" name="clr" id="txtColor" oninput="onChangeTxtColor(value)" value="#000000">
+                        <input class="txt-color" type="color" name="clr" id="txtColor" oninput="onChangeTxtColor(value)"
+                            value="#000000">
 
                         <button class="settings-btns size-btn" onclick="onFontSize(4)">
                             <div class="fa font-size">+</div>
@@ -60,9 +61,16 @@
                     </div>
 
                     <div class="alignments flex">
-                        <button class="alignment-btns settings-btns fa alignment-left" onclick="onAlignment('left')"></button>
-                        <button class="alignment-btns settings-btns fa alignment-center" onclick="onAlignment('center')"></button>
-                        <button class="alignment-btns settings-btns fa alignment-right" onclick="onAlignment('right')"></button>
+                        <button class="alignment-btns settings-btns fa alignment-left"
+                            onclick="onAlignment('left')"></button>
+                        <button class="alignment-btns settings-btns fa alignment-center"
+                            onclick="onAlignment('center')"></button>
+                        <button class="alignment-btns settings-btns fa alignment-right"
+                            onclick="onAlignment('right')"></button>
+                        <button class="vertical-move-btns settings-btns fa move-up"
+                            onclick="onVerticalMove(-10)"></button>
+                        <button class="vertical-move-btns settings-btns fa move-down"
+                            onclick="onVerticalMove(10)"></button>
                     </div>
 
                     <div class="act flex">
