Add delete line fnc and add some styling for lines settings

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     </div>
 
                     <div class="lines-settings flex">
-                        <button class="fa add-line" onclick="onAddLine()"></button>
-                        <button class="fa switch-line" onclick="onSwitchLine()"></button>
+                        <button class="settings-btns fa add-line" onclick="onAddLine()"></button>
+                        <button class="settings-btns fa switch-line" onclick="onSwitchLine()"></button>
+                        <button class="settings-btns fa delete-line" onclick="onDeleteLine()"></button>
                     </div>
 
                     <div class="settings flex">
