--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onload="onInit()">
 
-    <header class="main-header">
+    <header class="main-header flex">
         <h3 class="logo" onclick="onLogo()">Meme Generator</h3>
     </header>
 
@@ -83,6 +83,11 @@
             </section>
         </div>
     </main>
+
+    <footer class="main-footer flex">
+        <h2 class="footer-title">Meme Generator by Lioz Fried</h2>
+        <p class="footer-paragraph">This Meme Generator designed by Lioz Fried, Coding Academy's student. Enjoy!</p>
+    </footer>
 
     <script src="js/controller/main.controller.js"></script>
     <script src="js/services/meme.service.js"></script>
