--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main class="main-content">
 
         <div class="main-gallery">
+            <button class="random-img-btn" onclick="onRandomImg()">I'm Flexible</button>
             <section class="gallery">
             </section>
         </div>
@@ -95,6 +96,7 @@
         <p class="footer-paragraph">This Meme Generator designed by Lioz Fried, Coding Academy's student. Enjoy!</p>
     </footer>
 
+    <script src="js/services/utils.service.js"></script>
     <script src="js/controller/main.controller.js"></script>
     <script src="js/services/meme.service.js"></script>
     <script src="js/controller/gallery.controller.js"></script>
