Fix resize problems

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Meme Generator</title>
 </head>
 
-<body onload="onInit()">
+<body onload="onInit()" onresize="onResize()">
 
     <header class="main-header flex">
         <h3 class="logo" onclick="onLogo()">Meme Generator</h3>
